--- a/style.scss
+++ b/style.scss
@@ -112,17 +112,21 @@ img {
 
 table{
     border-collapse: collapse;
-    border-spacing: 0;
-    border:2px solid #ff0000;
-}
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: Garamond, sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);}
 
-th{
-    border:2px solid #000000;
-}
+th {
+    background-color: #bf80ff;
+    color: #ffffff;
+    text-align: center;
+    }
 
 td{
-    border:1px solid #000000;
-	text-align: center;
+	text-align: left;
+	padding: 12px 15px;
 }
 
 // Fixes images in popup boxes from Google Translate
